# crypto-analytics

./: .env.postgresql  .flake8  .gitignore  DATABASE_ANALYSIS_AND_RECOMMENDATIONS.md  DATABASE_MIGRATION_GUIDE.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  WARP.md  analysis_state.json  check_db.py  cleanup_remaining.py  debug_medium.py  docker-compose.yml  error_report.json  fix_sequences.py  force_wipe.py  migrate_to_postgresql.py  monitor_progress.py  mypy.ini  pgadmin_servers.json  pyproject.toml  requirements-archival.txt  requirements.txt  run_comprehensive_analysis.py  run_livecoinwatch.ps1  run_medium_analysis.py  run_medium_limited.py  test_credentials.py  test_file_filtering.py  test_medium_pipeline.py  test_ollama_usage_tracking.py  test_pg_connection.py  test_reddit_pipeline.py  test_url_filtering.py  verify_postgresql.py  wipe_database.py
backup_scripts/: README.md  backup.sh
config/: .env.example  env  env.example  redis.conf
db_init/: 01_init_schema.sql  02_create_indexes.sql
docs/: ANALYSIS_REPORT.md  ARCHIVAL_FINAL_SUMMARY.md  ARCHIVAL_INTEGRATION_GUIDE.md  ARCHIVAL_INTEGRATION_SUMMARY.md  ARCHIVAL_QUICKSTART.md  ARCHIVAL_STATUS.md  ARCHIVAL_SYSTEM_SUMMARY.md  COMMANDS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS_PART2.md  CryptoAnalyticsWithML_LLM.md  Crypto_Data_Sources.md  DATABASE_CONFIG.md  DOCKER_SETUP.md  GOOGLE_DRIVE_SUPPORT.md  OAUTH_TEST_USERS.md  README.md  REDDIT_API_NOTES.md  REDDIT_SCRAPER_IMPROVEMENTS.md  WEBSITE_SCRAPING_ERROR_HANDLING_PLAN.md  WEB_ARCHIVAL_IMPLEMENTATION_PLAN.md  YOUTUBE_API_SETUP.md  YOUTUBE_OAUTH_QUICK_SETUP.md  livecoinwatch_api.md  project_analysis_strategy.md  twitter_api_research.md  twitter_integration_guide.md
migrations/: 004_increase_supply_precision.sql  005_increase_supply_precision_further.sql  006_add_website_status_tracking.sql  007_add_reddit_status_tracking.sql  008_add_reddit_status_log_table.sql  009_increase_consensus_mechanism_length.sql
scripts/: apply_migrations.py  check_db_schema.py  migrate_database_schema.py  migrate_database_schema_v2.py  migrate_database_schema_v3.py  migrate_reddit_status_columns.py  migrate_reddit_status_log_table.py  path_utils.py  setup_youtube_oauth.py  wipe_database_direct.py  wipe_database_truncate.py
src/: __init__.py
tests/: test_credentials.py  test_ollama_usage_tracking.py  test_pg_connection.py  test_reddit_pipeline.py  (+3 more)
(+90 files in other folders)
